--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,3 +2,11 @@
 /FiguraGeometrica.class
 /Rectangulo.class
 /Triangulo.class
+/CirculoRLD.class
+/FiguraGeometricaRLD.class
+/RectanguloRLD.class
+/TrianguloRLD.class
+/Circulo_RLD.class
+/Triangulo_RLD.class
+/Rectangulo_RLD.class
+/FiguraGeometrica_RLD.class
