--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,3 @@
-/Circulo.class
-/FiguraGeometrica.class
-/Rectangulo.class
-/Triangulo.class
-/CirculoRLD.class
-/FiguraGeometricaRLD.class
-/RectanguloRLD.class
-/TrianguloRLD.class
-/Circulo_RLD.class
-/Triangulo_RLD.class
-/Rectangulo_RLD.class
-/FiguraGeometrica_RLD.class
+/Circulo_RLDTest.class
+/Circulo_RLDTest2.class
+/Circulo_RLDTest3.class
